tests/Rules/Structure/Fixtures/invalid/table_th_empty.html.twig
{# 1 errors #}
<table>
  <tr><th scope="col"></th><th scope="col">Age</th></tr>
  <tr><td>Alice</td><td>30</td></tr>
</table>
